Fix grays in dark mode

--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -28,7 +28,7 @@
     .section-bottom {
         border-top: 3px solid $shadow;
         margin-top: 0.75rem;
-        color: $subtitle;
+        color: $light-text;
         font-size: 0.85em;
     }
 
@@ -50,7 +50,7 @@
 
     .section-subtitle {
         font-size: 1.3rem;
-        color: $subtitle;
+        color: $light-text;
         margin-bottom: 0;
     }
 }
